# VI-Planning

./: README.md
data/map/: Infrastructure2Map Transformation.txt  lanelet2_map.osm
infrastructure_ws/: README.md
infrastructure_ws/bash/: start.sh
infrastructure_ws/bash/detection_pipline/: lidar_centerpoint.sh  object_lanelet_filter.sh
infrastructure_ws/bash/map_loader/: map_loader.sh  map_pro_loader.sh  map_tf.sh  pcd_loader.sh
infrastructure_ws/bash/occupancy/: grid_map_encode.sh
infrastructure_ws/bash/rviz/: panel.rviz  rviz.sh
infrastructure_ws/bash/track_prediction_pipline/: prediction.sh  track.sh
infrastructure_ws/src/autoware_dependencies/component_interface_specs/: CMakeLists.txt
infrastructure_ws/src/autoware_dependencies/tier4_autoware_utils/: CMakeLists.txt
infrastructure_ws/src/communication/hex_decode/: CMakeLists.txt
infrastructure_ws/src/communication/hex_decode/src/: hex_decode_node.cpp
infrastructure_ws/src/communication/send_v2x_pkg/: CMakeLists.txt  package.xml
infrastructure_ws/src/communication/send_v2x_pkg/src/: send_v2x.cpp
infrastructure_ws/src/detection_pipline/lidar_centerpoint/: CMakeLists.txt
infrastructure_ws/src/detection_pipline/lidar_centerpoint/config/: centerpoint_tiny.param.yaml
infrastructure_ws/src/detection_pipline/lidar_centerpoint/launch/: lidar_centerpoint.launch.xml
infrastructure_ws/src/detection_pipline/pointcloud_processing/: package.xml  setup.py
infrastructure_ws/src/detection_pipline/pointcloud_processing/pointcloud_processing/: PcModify.py
infrastructure_ws/src/map/map_loader/: CMakeLists.txt
infrastructure_ws/src/map/map_loader/launch/: lanelet2_map_loader.launch.xml  pointcloud_map_loader.launch.xml
infrastructure_ws/src/map/map_projection_loader/launch/: map_projection_loader.launch.xml
infrastructure_ws/src/map/map_tf_generator/launch/: map_tf_generator.launch.xml
infrastructure_ws/src/map/map_tf_generator/src/: vector_map_tf_generator_node.cpp
infrastructure_ws/src/occpancy_map/grid_cells_publisher_pkg/: CMakeLists.txt  package.xml
infrastructure_ws/src/occpancy_map/grid_cells_publisher_pkg/src/: grid_cells_publisher.cpp
infrastructure_ws/src/occpancy_map/grid_future_cells_publisher_pkg/: CMakeLists.txt  package.xml
infrastructure_ws/src/occpancy_map/grid_future_cells_publisher_pkg/src/: grid_future_cells_publisher_node.cpp
infrastructure_ws/src/occpancy_map/grid_map_encode_pkg/: CMakeLists.txt  package.xml
infrastructure_ws/src/track_prediction_pipline/detected_object_validation/: CMakeLists.txt
infrastructure_ws/src/track_prediction_pipline/map_based_prediction/: CMakeLists.txt
infrastructure_ws/src/viplanning_interface/viplanning_msgs/: package.xml
vehicle_ws/: README.md
vehicle_ws/bash/: start.sh
vehicle_ws/bash/occupancy/: occupancy_map_extract.sh  planning_refine.sh
vehicle_ws/src/autoware_dependencies/lanelet2_extension/: CMakeLists.txt
vehicle_ws/src/autoware_dependencies/object_recognition_utils/: CMakeLists.txt
vehicle_ws/src/com/hex_decode/: package.xml
vehicle_ws/src/com/hex_decode/src/: hex_decode_node.cpp
vehicle_ws/src/com/receive_pkg/: CMakeLists.txt  package.xml
vehicle_ws/src/occpancy_map/occupancy_map_extract_pkg/: CMakeLists.txt  package.xml
vehicle_ws/src/planning_refine/collision_optimizer_pkg/: CMakeLists.txt  package.xml
vehicle_ws/src/planning_refine/occupancy_map_fusion/: CMakeLists.txt  package.xml
vehicle_ws/src/viplanning_interface/viplanning_msgs/: CMakeLists.txt  package.xml
vehicle_ws/src/visualization/tier4_state_rviz_plugin/: CMakeLists.txt
(+13 files in other folders)
